modifica o nome da variavel posicaoAstro_Y

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                     tipoDeAstros = Phaser.Math.RND.between(0, 3); 
 
                     // escolhe de maneira aleatória a posição y em que o astro vai aparecer
-                    var posicaoastro_Y = Phaser.Math.RND.between(50, 650); 
+                    var posicaoAstro_X = Phaser.Math.RND.between(50, 650); 
 
                     // ajusta a posição do astro
-                    astro.setPosition(posicaoastro_Y, 100);
+                    astro.setPosition(posicaoAstro_X, 100);
 
                     // soma 1 na pontuação
                     pontuacao +=1; 
