Arruma um comentário trocando y por x

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     // escolhe de maneira aleatória o próximo astro que aparecerá
                     tipoDeAstros = Phaser.Math.RND.between(0, 3); 
 
-                    // escolhe de maneira aleatória a posição y em que o astro vai aparecer
+                    // escolhe de maneira aleatória a posição x em que o astro vai aparecer
                     var posicaoAstro_X = Phaser.Math.RND.between(50, 650); 
 
                     // ajusta a posição do astro
